# Streamique

./: LICENSE  README.md  Server.sln  descriere video panzer.docx  dummy_users.txt
Server/: Program.cs  Server.API.csproj  Server.csproj  Startup.cs  appsettings.Development.json  appsettings.json
Server.Data/: Extensions.cs  Server.Data.csproj
Server.Data/DTOs/: EventDto.cs  LobbyCreationDto.cs  LobbyDto.cs  LobbyJoinRequestCreationDto.cs  LobbyJoinRequestDto.cs  LoginDto.cs  RegistrationDto.cs  (+1 more)
Server.EventBus/: InMemoryEventSubscriptionsManager.cs  Server.EventBus.csproj
Server.Services/: AuthorizationService.cs  Extensions.cs  GenericService.cs  LobbyJoinRequestService.cs  LobbyService.cs  Server.Services.csproj
videopanzer/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  SIPAccount.cpp  SIPAccount.h  SIPCall.cpp  SIPCall.h  SIPManager.cpp  SIPManager.h  VideoPanzer.pro  VideoPanzer.pro.user.3fa0720  VideoPanzer.pro.user.a5166b3  VideoWidget.cpp  VideoWidgetManager.cpp  VideoWidgetManager.h  client.h  client.ui  connection.h  conversationcamerahandler.cpp  conversationcamerahandler.h  inputmessage.cpp  inputmessage.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  sounds.qrc
videopanzer/videopanzer/: MainWindow.cpp  MainWindow.h  SIPCall.h  VideoWidget.h  client.cpp  client.h  connection.cpp  connection.h  images.qrc  main.cpp  mainwindow.ui  peermanager.cpp  peermanager.h  server.cpp  server.h
videopanzer3/: MainWindow.cpp  MainWindow.h  SIPAccount.cpp  SIPAccount.h  SIPManager.cpp  VideoPanzer.pro  client.cpp  connection.cpp  peermanager.cpp  peermanager.h
(+80 files in other folders)
